msg: move on jdk-21